2008-12-11  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9836: RTE TSconfig lost when uploading files or creating folders

2008-12-09  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9915: Typing error in tslib_content ($gifCreateor => $gifCreator)

2008-12-03  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #6415: preg_replace error on PHP 5.2 sometimes resulting in empty pages (thanks to Francois Suter)

2008-12-01  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9790: class.gzip_encode.php fails with open_basedir restrictions

2008-11-27  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #8944: PHP-Error in class.em_index.php on line 4333

2008-11-22  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9798: Don't show fe_users password in page module

2008-11-01  Oliver Hader  <oliver@typo3.org>

	* Follow-up to bug #9664: t3lib_div::strtolower() is not implemented (thanks to Marcus Krause)
	* Fixed bug #9632: Multiple fileuploads into folders with special characters (umlauts) not possible (thanks to Marcus Krause)

2008-10-31  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #9659: TCEmain wrongly tests required input-type fields (thanks to Francois Suter)

2008-10-28  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #9664: EM fails on retrieving files of uppercase extension keys (thanks to Marcus Krause)

2008-10-21  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #9553: Form validation script jsfunc.validateform.js sometimes fails in IE (thanks to Vladimir Podkovanov)

2008-10-14  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #9501: Titles of content columns in classic page module doesn't take into account backend charset (thanx to Steffen Kamper and Vladimir Podkovanov)

2008-10-10  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9522: t3lib_BEfunc::BEenableFields generates invalid SQL

2008-10-04  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9479: Selected items are not visible after saving the form in BE
